[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/botao_verde2.png" type="Texture" id=1]
[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/botao_verde1.png" type="BitMap" id=3]
[ext_resource path="res://Sprites/botao_verde_normal.png" type="Texture" id=4]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Cenas/Scripts/Idiomas.gd" type="Script" id=6]
[ext_resource path="res://Assets2/Icones/SetaNova2.png" type="Texture" id=7]
[ext_resource path="res://Assets2/Icones/Setanova.png" type="Texture" id=8]
[ext_resource path="res://Cenas/Transicao.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=10]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=11]
[ext_resource path="res://Sons/confirmacao.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Transicao" parent="." instance=ExtResource( 9 )]
layer = 0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 6.66666, 6.66666 )
texture = ExtResource( 2 )

[node name="BotaoPt" type="TextureButton" parent="."]
margin_left = 376.0
margin_top = 69.0
margin_right = 1042.0
margin_bottom = 444.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_click_mask = ExtResource( 3 )

[node name="BotaoEsp" type="TextureButton" parent="."]
margin_left = 378.0
margin_top = 202.0
margin_right = 1044.0
margin_bottom = 577.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_click_mask = ExtResource( 3 )

[node name="BotaoEng" type="TextureButton" parent="."]
margin_left = 378.0
margin_top = 339.0
margin_right = 1044.0
margin_bottom = 714.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_click_mask = ExtResource( 3 )

[node name="Portugues" type="Label" parent="."]
margin_left = 400.0
margin_top = 184.0
margin_right = 888.0
margin_bottom = 280.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Português"
align = 1
valign = 1

[node name="English" type="Label" parent="."]
margin_left = 408.0
margin_top = 456.0
margin_right = 888.0
margin_bottom = 552.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "English"
align = 1
valign = 1

[node name="Espanol" type="Label" parent="."]
margin_left = 408.0
margin_top = 312.0
margin_right = 888.0
margin_bottom = 416.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Español"
align = 1
valign = 1

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_right = 48.0
margin_bottom = 32.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
stretch_mode = 5

[node name="SomConfirmar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -13.0

[connection signal="mouse_entered" from="BotaoPt" to="." method="_on_BotaoPt_mouse_entered"]
[connection signal="pressed" from="BotaoPt" to="." method="_on_BotaoPt_pressed"]
[connection signal="mouse_entered" from="BotaoEsp" to="." method="_on_BotaoEsp_mouse_entered"]
[connection signal="pressed" from="BotaoEsp" to="." method="_on_BotaoEsp_pressed"]
[connection signal="mouse_entered" from="BotaoEng" to="." method="_on_BotaoEng_mouse_entered"]
[connection signal="pressed" from="BotaoEng" to="." method="_on_BotaoEng_pressed"]
[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
